Refractored code. Created separate js files for each section. Fixed safari bug not loading json because of scope. Fixed partners images not sizing correctly on safari

--- a/css/index/god-partneri-sec.css
+++ b/css/index/god-partneri-sec.css
@@ -55,8 +55,13 @@
 .godisnji-partneri-sec__slide {
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
 
   transition: margin-left 0;
+}
+
+.godisnji-partneri-sec__slide > a {
+  width: fit-content;
 }
 
 .godisnji-partneri-sec__slide > a > img {
